Fix issue where images were too big in Edge.

--- a/docs/custom.css
+++ b/docs/custom.css
@@ -2,7 +2,8 @@
 /*Styles for images*/
 .img-tall {
   height: auto;
-  max-width: min(600px,100%);
+  width: auto;
+  max-width: 600px;
   padding: 15px;
   /*align: right;*/
 }
@@ -13,8 +14,9 @@
 }
 
 .img-middle {
-  max-width:min(700px,100%);
+  max-width:700px;
   height:auto;
+  width:auto;
   padding:15px;
   margin-left:auto;
   margin-right:auto;
